# deputy-old-mirror

./: .gitignore  Makefile  Makefile.in  README.md  config.status  configure  configure.ac
cil/: Makefile  Makefile.features  cil.spec  config.h  config.mk  config.status
cil/ocamlutil/: perfcount.c
doc/: deputy.1
doc/www/: index.html  manual.html  quickref.html
include/: libc_patch.h  libc_patch.i
include/deputy/: annots.h  checks.h
lib/: Deputy.pm  deputy_linux.c
rpm/: deputy.spec
src/: dattrs.ml  dattrs.mli  dcheck.ml  dcheck.mli  dcheckdef.ml  dcheckdef.mli  dglobinit.ml  dinfer.ml  dinfer.mli  dlocals.ml  doptions.ml  doptions.mli  dpatch.ml  dpatch.mli  dpoly.ml  dpoly.mli  dsolverfront.ml  dutil.ml  dutil.mli  dvararg.ml  main.ml
src/infer/: controlflow.ml  inferkinds.ml  markptr.ml  ptrnode.ml  ptrnode.mli  solver.ml  type.ml
src/optimizer/: dcanonexp.ml  dcheckhoister.ml  ddupcelim.ml  dflowinsens.ml  dflowsens.ml  dnonnullfinder.ml  doptimmain.ml  doptimutil.ml  dprecfinder.ml
src/optimizer/oct/mineOct/: doctanalysis.ml
src/optimizer/oct/nullOct/: doctanalysis.ml
src/optimizer/solver/cvclSolver/: cvcl.ml  cvcl_ocaml_wrappers.c  solverInterface.ml
src/optimizer/solver/nullSolver/: solverInterface.ml
test/: Makefile  Makefile.in  testdeputy  testdeputy.pl
test/libc/: Makefile  crypt1.c  ctype1.c  fwrite1.c  getaddrinfo1.c  getpwnam1.c  glob1.c  harness.h  hostent1.c  hostent2.c  malloc1.c  malloc2.c  memset1.c  popen1.c  printf1.c  printf2.c  readv1.c  servent1.c  servent2.c  sockaddr1.c  socket1.c  stat1.c  strchr1.c  strcpy.c  strerror1.c  string1.c  string2.c  string3.c  string4.c  string5.c  string6.c  string7.c  strlcpy.c  strncpy1.c  strpbrk1.c  strspn.c  strtok1.c  vararg1.c  writev1.c
test/small/: Makefile  abstract1.c  addrof1.c  addrof2.c  addrof3.c  addrof4.c  addrof5.c  addrof6.c  addrof7.c  align1.c  alloc1.c  alloc10.c  alloc2.c  alloc3.c  alloc4.c  alloc5.c  alloc6.c  alloc7.c  alloc8.c  alloc9.c  array1.c  array2.c  array3.c  array4.c  array5.c  auto1.c  auto2.c  auto3.c  auto4.c  auto5.c  auto6.c  auto7.c  auto8.c  bound1.c  builtin1.c  call1.c  call2.c  call3.c  call4.c  call5.c  (+196 more)
